services/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          name: sonarr
          resources: {}
          ports:
            - name: sonarr
              containerPort: 8989
          livenessProbe:
            httpGet:
              path: /
              port: sonarr
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: sonarr
            - name: nfs-vol-disk3
              mountPath: /disk3
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        - name: nfs-vol-disk3
          nfs:
            server: 192.168.1.2
            path: /disk3
      restartPolicy: Always
status: {}
