services/sonarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sonarr
  namespace: default
spec:
  selector:
    app: sonarr
  ports:
    - port: 80
      targetPort: sonarr
